<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Itzik Braun on 2/4/2015.
  ~ Copyright (c) 2015 deluge. All rights reserved.
  ~
  ~ Last Modification at: 8/19/14 3:10 PM
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/chat_sdk_root_view"
        android:layout_height="match_parent">

        <!--Status Header-->
        <TextView
            style="@style/ProfileViewHeaderTextViewStyle"
            android:text="@string/status_header"/>

        <!--Status input-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:ellipsize="end"
            android:padding="10dp"
            android:isScrollContainer="true"
            android:inputType="textShortMessage|textMultiLine|textCapSentences"
            android:maxLength="@integer/chat_sdk_max_status_length"
            android:id="@+id/chat_sdk_et_status"/>

        <!--Details Header-->
        <TextView
            style="@style/ProfileViewHeaderTextViewStyle"
            android:text="@string/details_header"/>

        <!--Details input-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear"
            android:layout_margin="5dp"
            android:gravity="center">

            <!--Name-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_name"
                    android:id="@+id/chat_sdk_ic_name"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="Name"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:id="@+id/chat_sdk_et_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/chat_sdk_ic_name"
                    android:layout_gravity="center_horizontal" />

            </RelativeLayout>

            <!--Location-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_location"
                    android:id="@+id/chat_sdk_ic_phone"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:layout_marginTop="5dp"
                    android:id="@+id/chat_sdk_et_location"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/chat_sdk_ic_phone"
                    android:imeOptions="actionDone"
                    android:layout_centerVertical="true"
                    android:hint="@string/location_hint" />

            </RelativeLayout>

            <!--Gender-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_gender"
                    android:id="@+id/chat_sdk_ic_gender"
                    android:layout_centerVertical="true"/>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/chat_sdk_ic_gender"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/linear_buttons"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textColor="@color/dark_gray"
                        android:id="@+id/btn_male"
                        android:background="@drawable/two_part_button_left_selector"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:gravity="center"
                        android:id="@+id/btn_female"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textColor="@color/dark_gray"
                        android:background="@drawable/two_part_button_right_selector"/>

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <!--Country Header-->
        <TextView
            style="@style/ProfileViewHeaderTextViewStyle"
            android:text="@string/country_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/chat_sdk_linear_select_country"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/chat_sdk_edit_profile_select_country"/>

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginRight="10dp"
                android:id="@+id/chat_sdk_ic_country"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"/>

<!--            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat_sdk_edit_profile_select_country"
                android:id="@+id/chat_sdk_select_country_button"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat_sdk_edit_profile_pick_birth_date"
                android:id="@+id/chat_sdk_pick_birth_date_button"/>
        </LinearLayout>

        <!--Invites Header-->
        <TextView
            style="@style/ProfileViewHeaderTextViewStyle"
            android:text="@string/invites_options_header"/>

        <!--Allow invites selection-->
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/linear_invite_buttons">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/everyone"
                android:layout_weight="1"
                android:padding="8dp"
                android:gravity="center"
                android:id="@+id/btn_everyone"
                android:textColor="@color/dark_gray"
                android:background="@drawable/two_part_button_left_selector"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:gravity="center"
                android:id="@+id/btn_friends"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/dark_gray"
                android:background="@drawable/part_button_center_selector"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nobody"
                android:gravity="center"
                android:id="@+id/btn_nobody"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/dark_gray"
                android:background="@drawable/two_part_button_right_selector"/>

        </LinearLayout>

        <!--Utilities Header-->
        <TextView
            style="@style/ProfileViewHeaderTextViewStyle"
            android:text="@string/utilities_header"/>

        <!--App info-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_info"
            android:id="@+id/chat_sdk_app_info_button"/>

        <!--Account Header-->
        <TextView
            style="@style/ProfileViewHeaderTextViewStyle"
            android:text="@string/account_header"/>

        <!--Logout-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/logout"
            android:id="@+id/chat_sdk_logout_button"/>


    </LinearLayout>

</ScrollView>
